fix: The like button on the card on the movies page is always visible

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -43,12 +43,13 @@
   position: absolute;
   top: 14px;
   right: 14px;
-  opacity: 0;
+  transition: opacity .3s ease;
+  opacity: 1;
 }
 
 .movies-card__item:hover .movies-card__btn {
   transition: .9s;
-  opacity: 1;
+  opacity: .7;
 }
 
 .movies-card__btn_type_inactive {
